...
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_item_rv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layoutAnimation="@anim/layout_animation"
                app:layout_constraintTop_toTopOf="parent"
                />

...
